@@ -26,6 +26,8 @@ include::content/docs/variables.adoc-include[]
 [[v0.40.1]]
 == 0.40.1 (TBD)
 
+icon:plus[] Java Rest Client: The `createSchema()` methods now accept a `ParameterProvider` vararg parameter.
+
 icon:check[] Core: Schema validation will no longer fail by default, when Elasticsearch is not available. The previous behavior can be enforced by adding `?strictValidation=true`.
 
 [[v0.40.0]]
